--- a/siteStyle.css
+++ b/siteStyle.css
@@ -11,14 +11,50 @@
 	height:85px;
 }
 
+.tickMark{
+	width:40px;
+	height:42px;
+}
 #submitButton, #undoButton{
 	visibility: hidden;
 }
 
 #greenPerson, #yellowPerson, #pinkPerson, #grayPerson,
  #navyPerson, #bluePerson, #redPerson, #purplePerson{
-	width: 25%;
+	width: 30%;
+	height: 15%;
 }
 #lowerButton1, #lowerButton2, #lowerButton3{
 	visibility: hidden;
+}
+
+#top{
+	text-align: center;
+	background-color: #f4511e;
+	color: #fff;
+	padding: 100px 25px;
+	font-family: Montserrat, sans-serif;
+}
+.header h1{
+	font-size: 700%;
+}
+
+#submitButton, #undoButton{
+	visibility: hidden;
+}
+
+#grid{
+	text-align: center;
+	padding: 20px;
+	font-family: Montserrat, sans-serif;
+
+} 
+
+#deal{
+    padding: 18px 28px;
+    font-size: 22px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
 }
