--- a/siteStyle.css
+++ b/siteStyle.css
@@ -53,7 +53,7 @@
   	background-image: url("purpleSquare.png");
 }
 #tablero{
-	margin: 0;
+	margin-left: 30em;
 	padding: 0;
 	z-index: 0;
 	width: auto;
