--- a/siteStyle.css
+++ b/siteStyle.css
@@ -183,11 +183,11 @@ font-size: 3em;
 
 }
 #turnos p {
-	margin-left: 1.5em;
-	margin-top: 1em;
-	color: #FFFFFF;
+	margin-left: 1em;
+	margin-top: .5em;
+	color: #000000;
 	font-family: ev;
-	font-size: 2.6em;
+	font-size: 1 em;
 
 }
 
