--- a/siteStyle.css
+++ b/siteStyle.css
@@ -33,18 +33,13 @@
 .toplayer{
 	z-index: 0;
 }
-.overlay1{
+.overlay1, .overlay2, .overlay3, .overlay4, .overlay5, .overlay6, .overlay7, .overlay8{
 	z-index: 3;
+	-webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+    transform: none;
 }
-.overlay1{
-	z-index: 4;
-}
-.overlay1{
-	z-index: 4;
-}
-.overlay1{
-	z-index: 5;
-}
+
+
 .overlayRotate{
 	z-index: 10;
 	position: absolute;
@@ -52,6 +47,8 @@
 	height: 4em;
 	margin-left:1em; 
 	margin-top:1em;
+	-webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+    transform: none;
 }
 .blanca{
 	background-image: url("purpleSquare.png");
